# mosaic-engine

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  install-debug.sh  install-release.sh  install.sh
.cache/clangd/index/: application.cpp.07BA15A256F300F8.idx  application.hpp.2B37131E52C1E5ED.idx  array.cpp.E2AAC09B1730717A.idx  array.hpp.06819917B0371703.idx  array.inl.EE8789579A983454.idx  buffer.hpp.14AE413B0A31C97E.idx  buffer.inl.405D7B903EFCC41A.idx  camera.cpp.2B85D073AEC88EFF.idx  camera.hpp.C48CADC5CEA6F42A.idx  components.cpp.16004434DCCD56C8.idx  components.hpp.2AF0152658B58D3A.idx  errors.cpp.13FBCF2CC90E68D6.idx  errors.hpp.C7DADAA34D6C5CDE.idx  events.cpp.4A01B48FC95BA723.idx  events.hpp.B775FD8A40139520.idx  events.inl.DEC23744897C25C1.idx  input.cpp.2C32475431B151F0.idx  input.hpp.48F7A0CA581A08E0.idx  logging.cpp.9BE35D354035BD31.idx  logging.hpp.508C417CF4DF0343.idx  logging.inl.4CEF51B7C40497BE.idx  pipeline.cpp.E440CEA903CE45F0.idx  pipeline.hpp.76E456D2F1CBDBB0.idx  pipeline.inl.2865B8E2F0E3CED5.idx  renderer.cpp.E4245DD14F039DD0.idx  renderer.hpp.359AB73A986788E0.idx  shader.hpp.15DD8A8C748B9A58.idx  shader.inl.86669B4DA86F95C8.idx  stb.cpp.8A0EADDFC814AC97.idx  stb.hpp.353DF1C8E6706421.idx  window.cpp.09BFC772520E7616.idx  window.hpp.9548345283FFE8A1.idx
cmake/: MosaicConfig.cmake.in
include/application/: application.hpp  camera.hpp  components.hpp  console.hpp  errors.hpp  events.hpp  input.hpp  logging.hpp  main.hpp  renderer.hpp  window.hpp
include/dependencies/: stb.hpp
include/frontend/: instance.hpp
include/rendering/: array.hpp  buffer.hpp  mesh.hpp  pass.hpp  pipeline.hpp  renderer.hpp  shader.hpp  target.hpp  texture.hpp
include/rendering/opengl/: renderer.hpp
include/rendering/vulkan/: commands.hpp  devices.hpp  instance.hpp  queues.hpp  renderer.hpp  surface.hpp  swapchain.hpp
include/utilities/: arithmetic.hpp  config.hpp  numerics.hpp  rect.hpp  typeinfo.hpp  vector.hpp
inline/application/: console.inl  events.inl  logging.inl
inline/rendering/: array.inl  buffer.inl  mesh.inl  pipeline.inl  shader.inl  texture.inl
inline/utilities/: array.inl  config.inl  vector.inl
interface/: Component.hpp  Program.hpp
mosaic/include/application/: application.hpp  components.hpp  console.hpp  input.hpp  main.hpp  renderer.hpp  window.hpp
mosaic/include/rendering/: interface.hpp
mosaic/include/rendering/opengl/: context.hpp  renderer.hpp
mosaic/include/rendering/vulkan/: commands.hpp  devices.hpp  implementation.hpp  instance.hpp  queues.hpp  renderer.hpp  surface.hpp  swapchain.hpp
mosaic/include/utilities/: array.hpp  config.hpp  vector.hpp
mosaic/inline/application/: console.inl  logging.inl
mosaic/inline/utilities/: array.inl  config.inl  vector.inl
mosaic/interface/: Component.hpp  Program.hpp
mosaic/source/application/: application.cpp  components.cpp  console.cpp  events.cpp  input.cpp  renderer.cpp  window.cpp
mosaic/source/rendering/opengl/: renderer.cpp
mosaic/source/rendering/vulkan/: commands.cpp  devices.cpp  instance.cpp  queues.cpp  renderer.cpp  surface.cpp  swapchain.cpp
mosaic/source/utilities/: config.cpp
old/include/application/: application.hpp  contexts.hpp  instance.hpp  window.hpp
old/include/rendering/: commands.hpp  graph.hpp  mesh.hpp  renderer.hpp  target.hpp
old/include/rendering/vulkan/: devices.hpp  instance.hpp  queues.hpp  renderer.hpp  swapchain.hpp
old/include/utilities/: rect.hpp  vector.hpp
old/inline/application/: events.inl
old/inline/utilities/: config.inl  vector.inl
old/interface/: Program.hpp
old/source/application/: application.cpp  components.cpp  events.cpp
old/source/rendering/: mesh.cpp  renderer.cpp
old/source/rendering/vulkan/: devices.cpp  instance.cpp  queues.cpp  surface.cpp
source/application/: application.cpp  camera.cpp  components.cpp  console.cpp  errors.cpp  events.cpp  input.cpp  logging.cpp  renderer.cpp  window.cpp
source/dependencies/: stb.cpp
source/rendering/: array.cpp  commands.cpp  mesh.cpp  pipeline.cpp  renderer.cpp  target.cpp
source/rendering/opengl/: renderer.cpp
source/rendering/vulkan/: commands.cpp  devices.cpp  instance.cpp  queues.cpp  renderer.cpp  surface.cpp  swapchain.cpp
source/utilities/: config.cpp
